--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3702,29 +3702,39 @@ input, select, textarea {
 /* Sidebar */
 
 	#sidebar {
-		padding: 2.5em 2.5em 0.5em 2.5em ;
+		/*padding: 2.5em 2.5em 0.5em 2.5em ;*/
+        padding: 0;
 		background-color: rgba(53, 56, 73, 50);
 		cursor: default;
-		height: 100vh;
+		height: 3.5em;
 		left: 0;
-		overflow-x: hidden;
-		overflow-y: auto;
+        overflow: hidden;
+		/*overflow-x: hidden;*/
+		/*overflow-y: auto;*/
 		position: fixed;
-		text-align: right;
+		/*text-align: right;*/
+        text-align: center;
 		top: 0;
-		width: 18em;
+		width: 100%;
 		z-index: 10000;
 	}
 
 		#sidebar > .inner {
+
+            font-family: Raleway, Helvetica, sans-serif;
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
 			display: flex;
-			-moz-flex-direction: column;
-			-webkit-flex-direction: column;
-			-ms-flex-direction: column;
-			flex-direction: column;
+
+            -moz-flex-direction: row;
+            -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+            flex-direction: row;
+			/*-moz-flex-direction: column;*/
+			/*-webkit-flex-direction: column;*/
+			/*-ms-flex-direction: column;*/
+			/*flex-direction: column;*/
 			-moz-justify-content: center;
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
@@ -3740,232 +3750,266 @@ input, select, textarea {
 			min-height: 100%;
 			opacity: 1;
 			width: 100%;
+            /*//*/
+            -moz-align-items: -moz-stretch;
+            -webkit-align-items: -webkit-stretch;
+            -ms-align-items: -ms-stretch;
+            align-items: stretch;
+            height: inherit;
+            line-height: inherit;
 		}
 
 			body.is-ie #sidebar > .inner {
 				height: 100%;
 			}
 
-		#sidebar nav > ul {
-			list-style: none;
-			padding: 0;
-		}
+        #sidebar nav{
+            height: inherit;
+            line-height: inherit;
+        }
 
-			#sidebar nav > ul > li {
-				-moz-transform: translateY(0);
-				-webkit-transform: translateY(0);
-				-ms-transform: translateY(0);
-				transform: translateY(0);
-				-moz-transition: opacity 0.15s ease, -moz-transform 0.75s ease;
-				-webkit-transition: opacity 0.15s ease, -webkit-transform 0.75s ease;
-				-ms-transition: opacity 0.15s ease, -ms-transform 0.75s ease;
-				transition: opacity 0.15s ease, transform 0.75s ease;
-				margin: 1.5em 0 0 0;
-				opacity: 1;
-				padding: 0;
-				position: relative;
-			}
+            #sidebar nav > ul {
+                list-style: none;
+                padding: 0;
 
-				#sidebar nav > ul > li:first-child {
-					margin: 0;
-				}
+                display: -moz-flex;
+                display: -webkit-flex;
+                display: -ms-flex;
+                display: flex;
+                height: inherit;
+                line-height: inherit;
+                margin: 0;
+            }
 
-				#sidebar nav > ul > li:nth-child(1) {
-					-moz-transition-delay: 0.45s;
-					-webkit-transition-delay: 0.45s;
-					-ms-transition-delay: 0.45s;
-					transition-delay: 0.45s;
-				}
+                #sidebar nav > ul > li {
+                    -moz-transform: translateY(0);
+                    -webkit-transform: translateY(0);
+                    -ms-transform: translateY(0);
+                    transform: translateY(0);
+                    -moz-transition: opacity 0.15s ease, -moz-transform 0.75s ease;
+                    -webkit-transition: opacity 0.15s ease, -webkit-transform 0.75s ease;
+                    -ms-transition: opacity 0.15s ease, -ms-transform 0.75s ease;
+                    transition: opacity 0.15s ease, transform 0.75s ease;
+                    /*margin: 1.5em 0 0 0;*/
+                    opacity: 1;
+                    padding: 0;
+                    position: relative;
 
-				#sidebar nav > ul > li:nth-child(2) {
-					-moz-transition-delay: 0.65s;
-					-webkit-transition-delay: 0.65s;
-					-ms-transition-delay: 0.65s;
-					transition-delay: 0.65s;
-				}
+                    display: block;
+                    height: inherit;
+                    line-height: inherit;
+                    margin: 0 0 0 2em;
+                }
 
-				#sidebar nav > ul > li:nth-child(3) {
-					-moz-transition-delay: 0.85s;
-					-webkit-transition-delay: 0.85s;
-					-ms-transition-delay: 0.85s;
-					transition-delay: 0.85s;
-				}
+                    #sidebar nav > ul > li:first-child {
+                        margin: 0;
+                    }
 
-				#sidebar nav > ul > li:nth-child(4) {
-					-moz-transition-delay: 1.05s;
-					-webkit-transition-delay: 1.05s;
-					-ms-transition-delay: 1.05s;
-					transition-delay: 1.05s;
-				}
+                    #sidebar nav > ul > li:nth-child(1) {
+                        -moz-transition-delay: 0.45s;
+                        -webkit-transition-delay: 0.45s;
+                        -ms-transition-delay: 0.45s;
+                        transition-delay: 0.45s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(5) {
-					-moz-transition-delay: 1.25s;
-					-webkit-transition-delay: 1.25s;
-					-ms-transition-delay: 1.25s;
-					transition-delay: 1.25s;
-				}
+                    #sidebar nav > ul > li:nth-child(2) {
+                        -moz-transition-delay: 0.65s;
+                        -webkit-transition-delay: 0.65s;
+                        -ms-transition-delay: 0.65s;
+                        transition-delay: 0.65s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(6) {
-					-moz-transition-delay: 1.45s;
-					-webkit-transition-delay: 1.45s;
-					-ms-transition-delay: 1.45s;
-					transition-delay: 1.45s;
-				}
+                    #sidebar nav > ul > li:nth-child(3) {
+                        -moz-transition-delay: 0.85s;
+                        -webkit-transition-delay: 0.85s;
+                        -ms-transition-delay: 0.85s;
+                        transition-delay: 0.85s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(7) {
-					-moz-transition-delay: 1.65s;
-					-webkit-transition-delay: 1.65s;
-					-ms-transition-delay: 1.65s;
-					transition-delay: 1.65s;
-				}
+                    #sidebar nav > ul > li:nth-child(4) {
+                        -moz-transition-delay: 1.05s;
+                        -webkit-transition-delay: 1.05s;
+                        -ms-transition-delay: 1.05s;
+                        transition-delay: 1.05s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(8) {
-					-moz-transition-delay: 1.85s;
-					-webkit-transition-delay: 1.85s;
-					-ms-transition-delay: 1.85s;
-					transition-delay: 1.85s;
-				}
+                    #sidebar nav > ul > li:nth-child(5) {
+                        -moz-transition-delay: 1.25s;
+                        -webkit-transition-delay: 1.25s;
+                        -ms-transition-delay: 1.25s;
+                        transition-delay: 1.25s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(9) {
-					-moz-transition-delay: 2.05s;
-					-webkit-transition-delay: 2.05s;
-					-ms-transition-delay: 2.05s;
-					transition-delay: 2.05s;
-				}
+                    #sidebar nav > ul > li:nth-child(6) {
+                        -moz-transition-delay: 1.45s;
+                        -webkit-transition-delay: 1.45s;
+                        -ms-transition-delay: 1.45s;
+                        transition-delay: 1.45s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(10) {
-					-moz-transition-delay: 2.25s;
-					-webkit-transition-delay: 2.25s;
-					-ms-transition-delay: 2.25s;
-					transition-delay: 2.25s;
-				}
+                    #sidebar nav > ul > li:nth-child(7) {
+                        -moz-transition-delay: 1.65s;
+                        -webkit-transition-delay: 1.65s;
+                        -ms-transition-delay: 1.65s;
+                        transition-delay: 1.65s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(11) {
-					-moz-transition-delay: 2.45s;
-					-webkit-transition-delay: 2.45s;
-					-ms-transition-delay: 2.45s;
-					transition-delay: 2.45s;
-				}
+                    #sidebar nav > ul > li:nth-child(8) {
+                        -moz-transition-delay: 1.85s;
+                        -webkit-transition-delay: 1.85s;
+                        -ms-transition-delay: 1.85s;
+                        transition-delay: 1.85s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(12) {
-					-moz-transition-delay: 2.65s;
-					-webkit-transition-delay: 2.65s;
-					-ms-transition-delay: 2.65s;
-					transition-delay: 2.65s;
-				}
+                    #sidebar nav > ul > li:nth-child(9) {
+                        -moz-transition-delay: 2.05s;
+                        -webkit-transition-delay: 2.05s;
+                        -ms-transition-delay: 2.05s;
+                        transition-delay: 2.05s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(13) {
-					-moz-transition-delay: 2.85s;
-					-webkit-transition-delay: 2.85s;
-					-ms-transition-delay: 2.85s;
-					transition-delay: 2.85s;
-				}
+                    #sidebar nav > ul > li:nth-child(10) {
+                        -moz-transition-delay: 2.25s;
+                        -webkit-transition-delay: 2.25s;
+                        -ms-transition-delay: 2.25s;
+                        transition-delay: 2.25s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(14) {
-					-moz-transition-delay: 3.05s;
-					-webkit-transition-delay: 3.05s;
-					-ms-transition-delay: 3.05s;
-					transition-delay: 3.05s;
-				}
+                    #sidebar nav > ul > li:nth-child(11) {
+                        -moz-transition-delay: 2.45s;
+                        -webkit-transition-delay: 2.45s;
+                        -ms-transition-delay: 2.45s;
+                        transition-delay: 2.45s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(15) {
-					-moz-transition-delay: 3.25s;
-					-webkit-transition-delay: 3.25s;
-					-ms-transition-delay: 3.25s;
-					transition-delay: 3.25s;
-				}
+                    #sidebar nav > ul > li:nth-child(12) {
+                        -moz-transition-delay: 2.65s;
+                        -webkit-transition-delay: 2.65s;
+                        -ms-transition-delay: 2.65s;
+                        transition-delay: 2.65s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(16) {
-					-moz-transition-delay: 3.45s;
-					-webkit-transition-delay: 3.45s;
-					-ms-transition-delay: 3.45s;
-					transition-delay: 3.45s;
-				}
+                    #sidebar nav > ul > li:nth-child(13) {
+                        -moz-transition-delay: 2.85s;
+                        -webkit-transition-delay: 2.85s;
+                        -ms-transition-delay: 2.85s;
+                        transition-delay: 2.85s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(17) {
-					-moz-transition-delay: 3.65s;
-					-webkit-transition-delay: 3.65s;
-					-ms-transition-delay: 3.65s;
-					transition-delay: 3.65s;
-				}
+                    #sidebar nav > ul > li:nth-child(14) {
+                        -moz-transition-delay: 3.05s;
+                        -webkit-transition-delay: 3.05s;
+                        -ms-transition-delay: 3.05s;
+                        transition-delay: 3.05s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(18) {
-					-moz-transition-delay: 3.85s;
-					-webkit-transition-delay: 3.85s;
-					-ms-transition-delay: 3.85s;
-					transition-delay: 3.85s;
-				}
+                    #sidebar nav > ul > li:nth-child(15) {
+                        -moz-transition-delay: 3.25s;
+                        -webkit-transition-delay: 3.25s;
+                        -ms-transition-delay: 3.25s;
+                        transition-delay: 3.25s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(19) {
-					-moz-transition-delay: 4.05s;
-					-webkit-transition-delay: 4.05s;
-					-ms-transition-delay: 4.05s;
-					transition-delay: 4.05s;
-				}
+                    #sidebar nav > ul > li:nth-child(16) {
+                        -moz-transition-delay: 3.45s;
+                        -webkit-transition-delay: 3.45s;
+                        -ms-transition-delay: 3.45s;
+                        transition-delay: 3.45s;
+                    }
 
-				#sidebar nav > ul > li:nth-child(20) {
-					-moz-transition-delay: 4.25s;
-					-webkit-transition-delay: 4.25s;
-					-ms-transition-delay: 4.25s;
-					transition-delay: 4.25s;
-				}
+                    #sidebar nav > ul > li:nth-child(17) {
+                        -moz-transition-delay: 3.65s;
+                        -webkit-transition-delay: 3.65s;
+                        -ms-transition-delay: 3.65s;
+                        transition-delay: 3.65s;
+                    }
 
-		#sidebar nav a {
-			-moz-transition: color 0.2s ease;
-			-webkit-transition: color 0.2s ease;
-			-ms-transition: color 0.2s ease;
-			transition: color 0.2s ease;
-			border: 0;
-			color: rgba(255, 255, 255, 0.35);
-			display: block;
-			font-size: 0.6em;
-			font-weight: bold;
-			letter-spacing: 0.25em;
-			line-height: 1.75;
-			outline: 0;
-			padding: 1.35em 0;
-			position: relative;
-			text-decoration: none;
-			text-transform: uppercase;
-		}
+                    #sidebar nav > ul > li:nth-child(18) {
+                        -moz-transition-delay: 3.85s;
+                        -webkit-transition-delay: 3.85s;
+                        -ms-transition-delay: 3.85s;
+                        transition-delay: 3.85s;
+                    }
 
-			#sidebar nav a:before, #sidebar nav a:after {
-				border-radius: 0.2em;
-				bottom: 0;
-				content: '';
-				height: 0.2em;
-				position: absolute;
-				right: 0;
-				width: 100%;
-			}
+                    #sidebar nav > ul > li:nth-child(19) {
+                        -moz-transition-delay: 4.05s;
+                        -webkit-transition-delay: 4.05s;
+                        -ms-transition-delay: 4.05s;
+                        transition-delay: 4.05s;
+                    }
 
-			#sidebar nav a:before {
-				background-color: rgba(255, 255, 255, 0.025);
-			}
+                    #sidebar nav > ul > li:nth-child(20) {
+                        -moz-transition-delay: 4.25s;
+                        -webkit-transition-delay: 4.25s;
+                        -ms-transition-delay: 4.25s;
+                        transition-delay: 4.25s;
+                    }
 
-			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
-				-moz-transition: max-width 0.2s ease;
-				-webkit-transition: max-width 0.2s ease;
-				-ms-transition: max-width 0.2s ease;
-				transition: max-width 0.2s ease;
-				max-width: 0;
-			}
+            #sidebar nav a {
+                -moz-transition: color 0.2s ease;
+                -webkit-transition: color 0.2s ease;
+                -ms-transition: color 0.2s ease;
+                transition: color 0.2s ease;
+                border: 0;
+                color: rgba(255, 255, 255, 0.35);
+                display: block;
+                font-size: 0.6em;
+                font-weight: bold;
+                letter-spacing: 0.25em;
+                line-height: 1.75;
+                outline: 0;
+                padding: 2em 0;
+                position: relative;
+                text-decoration: none;
+                text-transform: uppercase;
 
-			#sidebar nav a:hover {
-				background-color: rgba(255, 255, 255, 0.075);;
-			}
+                height: inherit;
+                /*line-height: inherit;*/
+                /*padding: 0;*/
+            }
 
-			#sidebar nav a.active {
-				color: #ffffff;
-			}
+                #sidebar nav a:before, #sidebar nav a:after {
+                    border-radius: 0.2em;
+                    bottom: 0;
+                    content: '';
+                    height: 0.2em;
+                    position: absolute;
+                    right: 0;
+                    width: 100%;
+                }
 
-				#sidebar nav a.active:after {
-					max-width: 100%;
-				}
+                #sidebar nav a:before {
+                    background-color: rgba(255, 255, 255, 0.025);
+                }
+
+                #sidebar nav a:after {
+                    /*background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);*/
+                    /*background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);*/
+                    /*background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);*/
+                    /*background-image: linear-gradient(to right, #5e42a6, #b74e91);*/
+                    /*background-color: #9faefe;*/
+
+                    background-image: none;
+                    background-color: #9faefe;
+
+                    -moz-transition: max-width 0.2s ease;
+                    -webkit-transition: max-width 0.2s ease;
+                    -ms-transition: max-width 0.2s ease;
+                    transition: max-width 0.2s ease;
+                    max-width: 0;
+                }
+
+                #sidebar nav a:hover {
+                    background-color: rgba(255, 255, 255, 0.075);;
+                }
+
+                #sidebar nav a.active {
+                    color: #ffffff;
+                }
+
+                    #sidebar nav a.active:after {
+                        max-width: 100%;
+                    }
 
 		body.is-preload #sidebar > .inner {
 			opacity: 0;
