--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic");
 
-/*
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -183,9 +177,10 @@ polyline{
 }
 .bar:hover {
     /*fill: #7450ff;*/
-    fill: rgba(0,0,0,1.5);
+    /*fill: rgba(0,0,0,1.5);*/
     /*-webkit-filter: brightness(20%);*/
     /*filter: brightness(85%);*/
+    opacity: 0.5;
 }
 
 .x.axis path {
