--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3528,7 +3528,13 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		padding: 10em 0 4.75em 0 ;
+		/*padding: 10em 0 4.75em 0 ;*/
+		padding: 7em 0 8.25em 0 ;
+		background-color: #2e3141;
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bikeshareimage.jpg");
+		background-size: auto, cover;
+		background-position: center, center;
+		margin-bottom: -6.5em;
 	}
 
 		#banner .inner {
