--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,13 +131,21 @@ footer, header, hgroup, menu, nav, section {
 }
 
 #map {
-    height: 400px;  /* The height is 400 pixels */
-    width: 100%;  /* The width is the width of the web page */
+    /*height: 400px;  !* The height is 400 pixels *!*/
+    /*width: 100%;  !* The width is the width of the web page *!*/
+	height: 68vh;
+	width: 152vh;
 }
 
 #vis {
-    height: 100%;
+    /*height: 100%;*/
     margin: 0;
+    height: 105vh;
+}
+
+#pieChart {
+    margin: 0;
+    height: 90vh;
 }
 
 svg {
